Included App_Plugins in .sln Signed-off-by: liam.mcdermott <liam.mcdermott@connectinternetsolutions.com>

--- a/StartMeUp/StartMeUp/Umbraco/Config/Lang/en.xml
+++ b/StartMeUp/StartMeUp/Umbraco/Config/Lang/en.xml
@@ -637,13 +637,16 @@ To manage your website, simply open the Umbraco back office and start adding con
     <key alias="renewSession">Renew now to save your work</key>
   </area>
   <area alias="login">
-    <key alias="greeting0">Happy super Sunday</key>
-    <key alias="greeting1">Happy manic Monday </key>
-    <key alias="greeting2">Happy tubular Tuesday</key>
-    <key alias="greeting3">Happy wonderful Wednesday</key>
-    <key alias="greeting4">Happy thunderous Thursday</key>
-    <key alias="greeting5">Happy funky Friday</key>
-    <key alias="greeting6">Happy Caturday</key>
+    <key alias="greeting0">Sunday</key>
+    <key alias="greeting1">Monday </key>
+    <key alias="greeting2">Tuesday</key>
+    <key alias="greeting3">Wednesday</key>
+    <key alias="greeting4">Thursday</key>
+    <key alias="greeting5">Friday</key>
+    <key alias="greeting6">
+      
+      
+      Caturday</key>
     <key alias="instruction">Log in below</key>
     <key alias="timeout">Session timed out</key>
     <key alias="bottomText"><![CDATA[<p style="text-align:right;">&copy; 2001 - %0% <br /><a href="http://umbraco.com" style="text-decoration: none" target="_blank">Umbraco.com</a></p> ]]></key>
